tests/m1/negative/private_const_import.ax
module private_const_import;

import m1lib.visibility;

fn main() -> i32 {
    return hidden_answer;
}
